# gravyflow

./: .gitignore  .gitmodules  LICENSE  README.md  check_o1_availability.py  debug_cache_plot.py  debug_lookup_trace.py  plotting_example.py  pyproject.toml  reproduce_bug.py  reproduce_glitch_issue.py  reproduce_jax_gpu.py  reproduce_optimization.py  reproduce_user_scenario.py  reproduce_wrapper_issue.py  segment_data_a5c6c8dec4c7979589ea5be13b9600b4.hdf5  setup.py  transient_plot_example.html  validate.py  verification_output.txt
.agent/tasks/: fix_chirp_nans.md
docs/: acquisition.md  search_events_docs.md  transient_obtainer_docs.md
example_notebooks/: 00_gravyflow_installation.ipynb  01_environment_setup.ipynb  03_feature_aquisition.ipynb  04_projecting_injections.ipynb  05_composing_examples.ipynb  05_projecting_injections.ipynb  06_composing_examples.ipynb  06_training_a_model.ipynb  07_training_a_model.ipynb  07_validating_a_model.ipynb  glitch_classification_example.py  pool_composition_example.py  small_glitch_test.py
example_notebooks/example_configs/: example_network.json  phenom_d_parameters.json  wnb_parameters.json
example_notebooks/test_notebooks/: dataset_test.ipynb  gpu_tracker.py  memory_usage.csv  nvidia_smi_dashboard+106.html  training.py  training_test.ipynb
example_notebooks/tutorials/: 01_introduction.py  02_noise_mode_basics.py  03_noise_mode_advanced.py  04_transient_mode_basics.py  05_transient_mode_advanced.py  06_augmentations.py  07_caching_performance.py
gravyflow/: __init__.py  pyproject.toml
gravyflow/config/: alert_settings.json
gravyflow/cuphenom/: .gitignore  .gitmodules  README.md  makefile
gravyflow/cuphenom/include/: cuda_phenom.h  lal_phenom.h  phenom_d_data.h  phenom_d_data.hu  phenom_d_functions.h  phenom_d_functions.hu  phenom_d_structures.h  phenom_d_structures.hu  phenom_functions.h  phenom_functions.hu  python_interface.h  qnm_data_a.csv  qnm_ringdown_frequency_imaginary.csv  qnm_ringdown_frequency_real.csv  units.h  zombie_phenom.h  zombie_phenom_backup.h
gravyflow/cuphenom/python/: cuphenom.py  test_cuphenom.py
gravyflow/cuphenom/src/: cuda_functions.cu  cuphenom.c  cuphenom_functions.c  test_cuda.c
gravyflow/res/glitch_cache/: glitch_query_07307b1961709cb0.csv  glitch_query_0c029f173a59ffc5.csv  glitch_query_0eb2eb10f34e4f96.csv  glitch_query_129ca7356666cf30.csv  glitch_query_1cd01f79158a2ff7.csv  glitch_query_24981879aa802c2f.csv  glitch_query_31fbecceae7a1744.csv  glitch_query_34e2e964e49045ef.csv  glitch_query_3e37496e973381be.csv  glitch_query_3fc22f39344b2c90.csv  glitch_query_428d9331ba6eb9ce.csv  glitch_query_487335b6d4dc7765.csv  glitch_query_627ea9dc5e9e90eb.csv  glitch_query_62efe39d1fc502e3.csv  glitch_query_677e3c7d8757b1f4.csv  glitch_query_6a16a091491b4482.csv  glitch_query_714744166dcf027b.csv  glitch_query_71c1f623fa787bba.csv  glitch_query_73bba24c6d6b5883.csv  glitch_query_7885af6d10e5b211.csv  glitch_query_7ad99499891bba50.csv  glitch_query_7d22ba38ea4883ad.csv  glitch_query_7d65955143a6ccd5.csv  glitch_query_7f4f78fd2f3d1e4c.csv  glitch_query_8255c542d4fdbae6.csv  glitch_query_83ca45eb217b2b5d.csv  glitch_query_8a0a95f183e84101.csv  glitch_query_8b1b1760d2716c6c.csv  glitch_query_9235b4875ee291f8.csv  glitch_query_939432140fafd964.csv  glitch_query_993fbdf76f28a9a1.csv  glitch_query_9c21353d934b4131.csv  glitch_query_9cd2f0e8509b73a7.csv  glitch_query_a1fbeaf815dd5f0d.csv  glitch_query_a7c20bb42cc5d7b3.csv  glitch_query_ab059df723b68fb6.csv  glitch_query_ae5142392413c407.csv  glitch_query_aef0c67a1c7223b0.csv  glitch_query_b68b61f20dcdad7c.csv  glitch_query_c4559250a8fd3970.csv  (+12 more)
gravyflow/res/model/: gabbard_2017.keras
gravyflow/res/noise_profiles/: hanford.csv
gravyflow/res/tests/: dataset_consistency_multi_incoherent.hdf5  dataset_consistency_multi_noise.hdf5  dataset_consistency_multi_phenomd.hdf5  dataset_consistency_multi_wnb.hdf5  dataset_consistency_single_noise.hdf5  dataset_consistency_single_phenomd.hdf5  dataset_consistency_single_wnb.hdf5  phenom_d_consistancy.hdf5  projected_injections_multi.hdf5  projected_injections_single.hdf5  wnb_consistancy.hdf5
gravyflow/src/dataset/: config.py  curriculum.py  dataset.py  diversity.py  pools.py
gravyflow/src/dataset/acquisition/: __init__.py  augmentations.py  base.py  cache.py  data_spec.py  noise.py  obtainer.py  segment.py  transient.py  transient_segment.py
gravyflow/src/dataset/conditioning/: conditioning.py  detector.py  pearson.py  whiten.py
gravyflow/src/dataset/features/: event.py  (+6 more)
gravyflow/src/detection/: __init__.py  matched_filter.py  snr.py  template_grid.py
gravyflow/src/model/: genetics.py  model.py  validate.py
gravyflow/src/tools/: gpu_checker.py
gravyflow/src/utils/: alert.py  git.py  gps.py  gpu.py  io.py  numerics.py  plotting.py  processes.py  shapes.py  tensor.py
gravyflow/src/validate/: __init__.py  bank.py  config.py  plotting.py  utils.py  validator.py
gravyflow/tests/: WIP_test_optimiser.py  WIP_test_training.py  WIP_test_validate.py  __init__.py  benchmark_injection.py  conftest.py  test_acquisition.py  test_acquisition_jax.py  test_array_scaling.py  test_cbc.py  test_conditioning.py  test_conditioning_jax.py  test_config.py  test_curriculum.py  test_dataset.py  test_dataset_jax.py  test_detector.py  test_detector_jax.py  test_determinism.py  test_event.py  test_features_mode.py  test_injection.py  test_injection_cropping.py  test_injection_jax.py  test_matched_filter.py  test_memory.py  test_ml_readiness.py  test_noise.py  test_noise_jax.py  test_noise_sampling.py  test_numerics.py  test_padding_warning.py  test_pearson.py  test_pearson_jax.py  test_plotting.py  test_pools.py  test_psd.py  test_psd_snr.py  test_scaling_output.py  test_simple_waveforms.py  (+13 more)
gravyflow/tests/example_injection_parameters/: phenom_d_parameters.json  phenom_d_parameters_high_mass.json  phenom_d_parameters_low_mass.json
gravyflow/tests/example_network_parameters/: example_network.json
scripts/: check_glitch_cache.py  debug_noise_normalization.py
test_cache_data/: glitch_cache.h5
tests/: verify_shapes.py
(+44 files in other folders)
