[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gravyflow"
version = "1.0.0"
description = "Jax and Keras-3 tools for gravitational wave data science."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Michael Norman", email = "mrknorman@proton.me" },
]
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  # If you want tighter compatibility, consider bounding these (e.g. <0.10),
  # but leaving as-is preserves your current intent.
  "jax>=0.8.1",
  "jaxlib>=0.8.1",

  "keras>=3.0",
  "ripplegw",
  "gwdatafind",
  "gwpy",
  "pycbc",
  "GitPython",
  "sqlalchemy",
  "bokeh>=3.3",
  "panel>=1.3",
  "holoviews>=1.18",
  "psycopg2-binary",
  "ipykernel",
]

[project.optional-dependencies]
# NVIDIA CUDA (Linux x86_64 only). These markers prevent macOS/Apple Silicon installs from trying to pull CUDA wheels.
cuda = [
  "jax-cuda12-pjrt>=0.8.1; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "jax-cuda12-plugin>=0.8.1; sys_platform == 'linux' and platform_machine == 'x86_64'",

  # Pinned CUDA 12.5 versions for JAX 0.8.x compatibility
  "nvidia-cublas-cu12==12.5.3.2; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-cusparse-cu12==12.5.1.3; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-cuda-cupti-cu12==12.5.82; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-cuda-nvrtc-cu12==12.5.82; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-cuda-runtime-cu12==12.5.82; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-cufft-cu12==11.2.3.61; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-cusolver-cu12==11.6.3.83; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-nvjitlink-cu12==12.5.82; sys_platform == 'linux' and platform_machine == 'x86_64'",

  # JAX 0.8.1 was compiled with cuDNN 9.8.0 - pinned to prevent incompatibility
  "nvidia-cudnn-cu12==9.8.0.87; sys_platform == 'linux' and platform_machine == 'x86_64'",

  "nvidia-nccl-cu12>=2.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

# Apple Silicon Metal backend (optional / experimental)
metal = [
  "jax-metal>=0.1.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
]

dev = [
  "pytest",
  "pytest-env",
  "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/mrknorman/gravyflow"
Repository = "https://github.com/mrknorman/gravyflow"

[tool.setuptools.packages.find]
where = ["."]
include = ["gravyflow*"]
exclude = ["ripple*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["gravyflow/tests"]
norecursedirs = ["example_notebooks", "scripts", ".git", "__pycache__", "*.egg-info"]
log_cli = true
log_cli_level = "ERROR"
filterwarnings = [
  "default",
  # External deprecation warnings we cannot fix
  "ignore::DeprecationWarning:scitokens.*",
  "ignore::DeprecationWarning:pkg_resources.*",
  "ignore:distutils Version classes are deprecated:DeprecationWarning",
  "ignore:pkg_resources is deprecated:DeprecationWarning",
  "ignore:Deprecated call to `pkg_resources.declare_namespace`:DeprecationWarning",
  "ignore:Support for identity-based X.509 credentials:DeprecationWarning",
  # Expected warnings in tests (intentional behavior)
  "ignore:Whitening requested for WHITE NOISE:UserWarning",
  "ignore:The structure of `inputs` doesn't match:UserWarning",
]
addopts = "--cov=gravyflow --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
omit = [
  "gravyflow/__init__.py",
  "gravyflow/tests/*",
  # Deprecated modules - excluded from coverage requirements
  "gravyflow/src/model/model.py",
  "gravyflow/src/model/genetics.py",
  "gravyflow/src/utils/processes.py",
  "gravyflow/src/utils/alert.py",
  "gravyflow/src/utils/git.py",
]

[tool.coverage.report]
show_missing = true
